Don't handle auto margins when the container has an unconstrained width.  (This still doesn't handle max-width computation with a constrained reflow.)  b=229654  r+sr=bzbarsky